# sw_miconlang

./: Cargo.toml
examples/: basic.txt
src/: main.rs
src/ast/: parse.rs
src/compile/: mod.rs
src/compile_error/: compile_error_type.rs  mod.rs
src/lexical/: mod.rs  token.rs
src/microcontroller/: auto_layout.rs  component.rs  link.rs  mod.rs  node.rs
src/microcontroller/components/: arithmetic.rs  mod.rs
src/parser/: parse.rs
src/semantic/: evaluate_expr.rs  field.rs  field_analyzer.rs  interface.rs  logic.rs  logic_analyzer.rs  mod.rs  value_type.rs
src/semantic/logic_analyzer/: functions.rs  mod.rs  operators.rs
src/syntax/: mod.rs  parser.rs  syntax_tree.rs
src/xml_schema/: attrs.rs  component_object.rs  component_states.rs  conversion.rs  mod.rs
